--- a/style.css
+++ b/style.css
@@ -1,17 +1,32 @@
-body{
-    background-color: steelblue;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2&display=swap');
+
+
+
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  flex: 1;
+  background-color: steelblue;
 }
 .container{
-    margin: 0;
-    padding: 10px;
+    font-family: 'Baloo 2', cursive;
+    color: aliceblue;
+    position: relative;
     display: flex;
-    justify-items: center;
+    flex-direction: row;
+    gap:100px;
     align-items: center;
-    gap: 100px;
+    justify-content: center;
+    top:20%;
+    
+
 }
 .formulario{
     color: white;
@@ -44,3 +59,4 @@ body{
     border-radius: 50%;
     align-self: center;
 }
+
