--- a/style.css
+++ b/style.css
@@ -5,38 +5,37 @@
 
 html,
 body {
-  height: 100%;
-  width: 100%;
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 body {
   flex: 1;
   background-color: steelblue;
-}
-.container{
-    font-family: 'Baloo 2', cursive;
-    color: aliceblue;
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    gap:100px;
-    align-items: center;
-    justify-content: center;
-    top:20%;
-    
 
 }
+.container{
+    color: aliceblue;
+    position: absolute;
+    font-family: 'Baloo 2', cursive;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+}
+
 .formulario{
     color: white;
-    height: 650px;
-    width: 450px;
+    height: 600px;
+    width: 500px;
     background-color:   rgb(51, 40, 122);
     border: 1px solid rgb(51, 40, 122);
     border-radius: 8px;
     gap: 30px;
     padding: 8px;
+    
 }
 .div2{
     display: flex;
