--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    gap: 100px;
     display: flex;
 }
 
@@ -59,3 +60,15 @@ body {
     align-self: center;
 }
 
+.container input{
+    border-radius: 7px;
+    border: none;
+    transition: transform 0.3s ease;
+}
+
+
+
+.container input:hover{
+    transform: scale(1.05);
+    
+}
